syntax = "proto3";
package configpb;

message Config {
  AppConfig     app = 1;
  NetworkConfig network = 2;
  DataConfig    db = 3;
  LogConfig     log = 4;
  MinerConfig   miner = 5;
}

message AppConfig {
  string profile = 1;
  string cpu_profile = 2;
  string pub_password = 3;
  string hostname = 4;
}

message NetworkConfig {
  P2PConfig p2p = 1;
  RPCConfig rpc = 2;
}

message DataConfig {
  string data_dir = 1;
  string db_type = 2;
}

message LogConfig {
  string log_dir = 1;
  string log_level = 2;
  bool disable_cprint = 3;
}

message MinerConfig {
  string            pocminer_backend = 1;
  string            spacekeeper_backend = 2;
  string            miner_dir = 3;
  repeated string   mining_addr = 4;
  bool              generate = 5;
  bool              allow_solo = 6;
  repeated string   proof_dir = 7;
  string            proof_list = 8;
  bool              plot = 9;
  string            private_password = 10;
}

message P2PConfig {
  string          seeds = 1;
  repeated string add_peer = 2;
  bool            skip_upnp = 3;
  uint32          handshake_timeout = 4;
  uint32          dial_timeout = 5;
  bool            vault_mode = 6;
  string          listen_address = 7;
}

message RPCConfig {
  string api_port_grpc = 1;
  string api_port_http = 2;
  repeated string api_whitelist = 3;
  repeated string api_allowed_lan = 4;
}
